--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Jhon Solier C.</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>Lo siento, pero este sitio web no funciona sin JavaScript. Por favor habilitalo para continuar.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>Jhon Solier C.</title>
+</head>
+
+<body>
+  <noscript>
+    <strong>Lo siento, pero este sitio web no funciona sin JavaScript. Por favor habilitalo para continuar.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  
+  <!-- Firebase setup -->
+  <script src="/__/firebase/7.15.3/firebase-app.js"></script>
+  <script src="/__/firebase/7.15.3/firebase-analytics.js"></script>
+  <script src="/__/firebase/init.js"></script>
+</body>
+
 </html>
